src/test/ui/issues/50000-59999/issue-57362-2.stderr
error[E0599]: no function or associated item named `make_g` found for fn pointer `for<'r> fn(&'r ())` in the current scope
  --> $DIR/issue-57362-2.rs:22:25
   |
LL |     let x = <fn (&())>::make_g();
   |                         ^^^^^^ function or associated item not found in `for<'r> fn(&'r ())`
   |
   = note: the method `make_g` exists but the following trait bounds were not satisfied:
           `for<'r> fn(&'r ()): X`
   = help: items from traits can only be used if the trait is implemented and in scope
note: `X` defines an item `make_g`, perhaps you need to implement it
  --> $DIR/issue-57362-2.rs:8:1
   |
LL | trait X {
   | ^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
